--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,6 @@
 ---
-import "../styles/global.css";
-
-import LinkCard from "../components/LinkCard.astro"
-import ProfileCard from "../components/ProfileCard.astro";
+import BaseLayout from "../layouts/BaseLayout.astro"
+import { indexData } from "../data/links";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body class="min-h-dvh bg-slate-100">
-		<div class="mx-auto max-w-6xl p-4 md:p-8">
-			<div class="grid gap-6 md:grid-cols-[320px_1fr]">
-				<div class="bg-blue-400 p-6 rounded-xl">
-					<ProfileCard />
-				</div>
-
-				<div class="bg-green-400 p-6 rounded-xl">
-					<LinkCard />
-				</div>
-			</div>
-		</div>
-	</body>
-</html>
+<BaseLayout page={indexData}/>
