--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,7 +19,7 @@ const { page } = Astro.props
     </head>
 
     <body>
-        <ProfileCard />
+        <ProfileCard profile_data={page}/>
         <SocialButtons socials={page.social_links} />
         {page.cards.map(card => <LinkCard card={card}/>)}
     </body>
