--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -1,5 +1,22 @@
 ---
+import type { PageData } from "../data/links"
 import "../styles/global.css"
+
+interface Props { 
+    profile_data: PageData 
+}
+const { profile_data } = Astro.props
 ---
 
-<p class="text-white font-semibold">Profile Area</p>
+<div class="relative">
+  <div class="h-48 overflow-hidden">
+    <img src={profile_data.header_image} class="w-full h-full object-cover" />
+  </div>
+  <div class="absolute bottom-0 left-1/2 -translate-x-1/2 translate-y-1/2 z-10">
+    <img src={profile_data.profile_image} class="w-48 h-48 rounded-full border-4 border-white dark:border-gray-900 object-cover" />
+  </div>
+</div>
+<div class="text-center mt-24 px-4 pb-2">
+  <h1 class="text-6xl font-bold">{profile_data.name}</h1>
+  <p class="text-gray-500 dark:text-gray-400 text-xl">{profile_data.tagline}</p>
+</div>
