--- a/src/components/SocialButtons.astro
+++ b/src/components/SocialButtons.astro
@@ -1,5 +1,20 @@
 ---
+import type { SocialLink } from "../data/links"
 import "../styles/global.css"
----
 
-<p class="text-white font-semibold">Social Buttons</p>
+interface Props {
+    social_links: SocialLink[]
+}
+const { social_links } = Astro.props
+---
+<div class="flex justify-center items-center">
+    <ul class="flex space-x-4">
+        {social_links.map((link) => (
+            <li>
+                <a href={link.link} target="_blank" rel="noopener noreferrer">
+                    <img src={`/images/social/${link.icon}.png`} alt={link.icon} class="w-12 h-12 rounded-full border-2 border-stone-700 dark:border-neutral-600 object-cover"/>
+                </a>
+            </li>
+        ))}
+    </ul>
+</div>
